k3s/apps/cns_fe/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cns-fe
spec:
  selector:
    matchLabels:
      app: cns-fe
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: cns-fe
    spec:
      containers:
      - name: cns-frontend
        image: angelalonso/cns_datafeed_frontend_armv6:v0.13
        ports:
        - containerPort: 80
        volumeMounts:
        # name must match the volume name below
          - name: cns-fe-secret-volume
            mountPath: /secrets
          - name: volume-images
            mountPath: /images
      volumes:
        - name: cns-fe-secret-volume
          secret:
            secretName: cns-fe-secret
        - name: volume-images
          persistentVolumeClaim:
            claimName: cns-images-pvc
