k3s/apps/cns_fe/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cns-fe
  namespace: default
spec:
  clusterIP: 10.43.82.97
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cns-fe
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
