k3s/apps/cns_fe/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homelab
  namespace: default
spec:
  rules:
    - host: homelab.fonseca.de.com
      http:
        paths:
          - path: /
            backend:
              serviceName: cns-fe
              servicePort: 80
